src/main/fabric8/deployent.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
    spec:
      containers:
        - env:
            - name: DB_USERNAME
              valueFrom:
                secretKeyRef:
                  name: again-database-secret
                  key: user
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: again-database-secret
                  key: password
            - name: JAVA_OPTIONS
              value: "-Dspring.profiles.active=openshift"
